// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component Should render correctly when not logged on 1`] = `
<header
  className="panel-bg"
>
  <h1
    className="bookstore-cms"
  >
    <Link
      to="/"
    >
      Bookstore App
    </Link>
  </h1>
  <div
    className="user-wrapper"
  >
    <button
      className="logout-btn"
      onClick={[Function]}
      type="button"
    >
      Log In
    </button>
  </div>
</header>
`;

exports[`Header component Should render correctly while authenticated 1`] = `
<header
  className="panel-bg"
>
  <h1
    className="bookstore-cms"
  >
    <Link
      to="/"
    >
      Bookstore App
    </Link>
  </h1>
  <div
    className="user-wrapper"
  >
    <span>
      <NavLink
        activeClassName="active"
        to="/users/ryto"
      >
        Ryto
         
        Verkar
      </NavLink>
    </span>
    <button
      className="logout-btn"
      onClick={[Function]}
      type="button"
    >
      Log Out
    </button>
  </div>
</header>
`;
